[package]
name = "bgsi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["blocking", "json"]}
serde = { version = "^1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "^0.8"
futures = "^0.3.5"
tokio = { version = "^0.2", features = ["full"] }
crossbeam = "^0.8"
toml = "^0.4"
log = "^0.4"
pretty_env_logger = "0.4.0"
http = "^0.2"
actix-web = "^3"
handlebars = "^4.1"